cmake_minimum_required (VERSION 2.6)
project (Tutorial)

# Dependencies : libboost-all-dev libgnuplot-iostream-dev
find_package(Boost COMPONENTS filesystem system iostreams REQUIRED)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -pthread")

add_executable(hello_world experiment/hello_world.cpp)
add_executable(data_vars experiment/data_vars.cpp)
add_executable(arrays experiment/arrays.cpp)
add_executable(pointers experiment/pointers.cpp)
add_executable(exceptions_looping experiment/exceptions_looping.cpp)
add_executable(math_strings experiment/math_strings.cpp)
add_executable(problems experiment/problems.cpp)
add_executable(problems2 experiment/problems2.cpp)
add_executable(recursion_overloaded_funcs experiment/recursion_overloaded_funcs.cpp)
add_executable(lambda_exp experiment/lambda_exp.cpp)
add_executable(oop experiment/oop.cpp)
add_executable(oop2 experiment/oop2.cpp)
add_executable(structs experiment/structs.cpp)
add_executable(friendly_classes experiment/friendly_classes.cpp)
add_executable(polymorphism experiment/polymorphism.cpp)
add_executable(abstract_class experiment/abstract_class.cpp)
add_executable(operator_overloading experiment/operator_overloading.cpp)
add_executable(fileIO experiment/fileIO.cpp)
add_executable(advanced_functions experiment/advanced_functions.cpp)
add_executable(templates_and_iterators experiment/templates_and_iterators.cpp)
add_executable(smart_ptrs_begin experiment/smart_ptrs_begin.cpp)
add_executable(polymorphic_templates experiment/polymorphic_templates.cpp)
add_executable(threads experiment/threads.cpp)
add_executable(threads_primes experiment/threads_primes.cpp)
add_executable(bits experiment/bits.cpp)
add_executable(unique_ptr experiment/unique_ptr.cpp)
add_executable(nan experiment/nan.cpp)

add_executable(1_dfs_bfs_adjacency important/1_dfs_bfs_adjacency.cpp)
add_executable(3_sort important/3_sort.cpp)
add_executable(8_boolean important/8_boolean.cpp)
add_executable(9_smart_pointers important/9_smart_pointers.cpp)
add_executable(10_threads important/10_threads.cpp)

add_executable(recursion udemy/recursion.cpp)
add_executable(array_udemy udemy/array.cpp)
add_executable(array_ADT udemy/array_ADT.cpp)


add_executable(runge_kutta_4 robotics/runge_kutta_4.cpp)
target_link_libraries(runge_kutta_4 ${Boost_LIBRARIES})
add_executable(runge_kutta_basic robotics/runge_kutta_basic.cpp)
target_link_libraries(runge_kutta_basic ${Boost_LIBRARIES})
